--- a/app/src/main/res/layout/layout_about.xml
+++ b/app/src/main/res/layout/layout_about.xml
@@ -108,6 +108,13 @@
 				android:textColorLink="#ffffff"
 				android:paddingLeft="15px"
 				android:textColor="#ffffff"/>
+                        <TextView android:text="@string/obfsproxy_version"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:autoLink="web"
+                                android:textColorLink="#ffffff"
+                                android:paddingLeft="15px"
+                                android:textColor="#ffffff"/>
 			<TextView android:text="@string/openssl_version"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
