--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -207,21 +207,21 @@
 
         <EditTextPreference
             android:inputType="number"
-            android:defaultValue="0"
+            android:defaultValue="8118"
             android:dialogTitle="@string/pref_http_dialog"
             android:key="pref_http"
             android:summary="@string/pref_http_summary"
             android:title="@string/pref_http_title" />
 
         <EditTextPreference
-            android:defaultValue="0"
+            android:defaultValue="auto"
             android:dialogTitle="@string/pref_transport_dialog"
             android:key="pref_transport"
             android:summary="@string/pref_transport_summary"
             android:title="@string/pref_transport_title" />
 
         <EditTextPreference
-            android:defaultValue="0"
+            android:defaultValue="auto"
             android:dialogTitle="@string/pref_dnsport_dialog"
             android:key="pref_dnsport"
             android:summary="@string/pref_dnsport_summary"
